message git push

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,6 @@
 {% block title %}Index{% endblock title%}
 
 {% block content %}
-
+Here's some content I can drop into the Index
+And here are some edits
 {% endblock content%}
